--- a/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.csproj
+++ b/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.csproj
@@ -53,5 +53,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="CSharpRoutes icon.png" />
+    <Content Include="CSharpRoutes-icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
