--- a/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.nuspec
+++ b/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.nuspec
@@ -3,15 +3,25 @@
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <title>CSharpRoutes-FrameworkVersion</title>
+    <authors>David Legendre</authors>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <license type="expression">MIT</license>
     <!-- <icon>icon.png</icon> -->
-    <projectUrl>http://project_url_here_or_delete_this_line/</projectUrl>
-    <description>$description$</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>$copyright$</copyright>
-    <tags>Tag1 Tag2</tags>
+    <projectUrl>https://github.com/Davidlegendre/CSharpRoutes-FrameworkVersion</projectUrl>
+    <description>CSharpRoutes es una libreria para crear rutas al estilo Express pero orientado al desarrollo desktop</description>
+    <icon>CSharpRoutes icon.png</icon>
+    <releaseNotes>Primera version</releaseNotes>
+    <copyright>Copyright © 2022 by David Legendre</copyright>
+    <tags>CSharpRoutes Routes Rutas Ruta desktop</tags>
+    <repository type="git" url="https://github.com/Davidlegendre/CSharpRoutes-FrameworkVersion.git" branch="dev" />
+    <dependencies>
+      <group targetFramework=".NETFramework4.5">
+        <dependency id="Newtonsoft.Json" version="13.0.1" />
+      </group>
+    </dependencies>
   </metadata>
+  <files>
+    <file src=".\CSharpRoutes icon.png" target="\" />
+  </files>
 </package>
