--- a/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.csproj
+++ b/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.csproj
@@ -57,7 +57,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CSharpRoutes icon.png" />
+    <Content Include="CSharpRoutes-icon.png" />
     <Content Include="CSharpRoutes-icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
