--- a/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.nuspec
+++ b/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.nuspec
@@ -10,7 +10,7 @@
     <!-- <icon>icon.png</icon> -->
     <projectUrl>https://github.com/Davidlegendre/CSharpRoutes-FrameworkVersion</projectUrl>
     <description>CSharpRoutes es una libreria para crear rutas al estilo Express pero orientado al desarrollo desktop</description>
-    <icon>CSharpRoutes-icon.ico</icon>
+    <icon>CSharpRoutes-icon.png</icon>
     <releaseNotes>Primera version</releaseNotes>
     <copyright>Copyright © 2022 by David Legendre</copyright>
     <tags>CSharpRoutes Routes Rutas Ruta desktop</tags>
