--- a/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.nuspec
+++ b/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.nuspec
@@ -21,4 +21,7 @@
       </group>
     </dependencies>
   </metadata>  
+   <files>
+    <file src="CSharpRoutes-icon.png" target="" />
+  </files> 
 </package>
