--- a/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.csproj
+++ b/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -60,7 +61,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CSharpRoutes-icon.png" />
+    <Content Include="img\CSharpRoutes-icon.png" />
     <Content Include="CSharpRoutes-icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
