--- a/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.nuspec
+++ b/CSharpRoutes-FrameworkVersion/CSharpRoutes-FrameworkVersion.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>$version$</version>
+    <version>1.0.4</version>
     <title>CSharpRoutes-FrameworkVersion</title>
     <authors>David Legendre</authors>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
